Updated App.scss to fix tooltip overflow bug

--- a/src/App.scss
+++ b/src/App.scss
@@ -1700,7 +1700,7 @@ abbr {
   margin-bottom: 2.5rem;
   overflow-x: auto;
   width: 28rem;
-
+  overflow: visible;
   .state-meta {
     align-items: center;
     display: flex;
